2017-12-26  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/utils.c (history-lineno, history-next, history-prev):
	New words added.

	* src/utils.c (history): New command gl-add added.

2017-12-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/proc.c (ficl_get_help): Returns the help string
	instead of printing it.  The repl prints it.

2017-12-22  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs (with-sound): Add run-reverb.

2017-12-18  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs (sound-let): Some bugs fixed.

2017-12-16  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/fth-lib/fth.fs (stack-check): New function.

	* src/misc.c (ADD_TO_LOAD_PATH): Remove trailing slash from
	path if any.

	* examples/site-lib/clm.fs (with-sound): Catch all exceptions
	to reset variables before finish.

2017-12-15  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/effects.fs: effects-cross-synthesis is
	an alias for cross-synthesis from examp.fs.

	* examples/site-lib/examp.fs: Fix expsrc, cross-synthesis,
	voiced->unvoiced, pulse-voice.

2017-12-07  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/popup.fs: Remove some bugs in edhist.

2017-12-02  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/io.c: Remove index bugs in string io functions.

	* examples/site-lib/marks.fs (marks->string): port-puts
	requires an output io object.

2017-12-01  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/examp.fs: Replace several undefs with
	correct values for function graph.

2017-10-06  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* SConscript: print() syntax has changed.

2017-09-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs: Remove clm-default-frequency.

2016-03-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* SConstruct: New file.
	* SConscript: New file.